--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "device-info-vercel-app",
+  "name": "wk03-device-info",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "vercel dev",
     "start": "vercel dev"
   },
-  "dependencies": {},
   "engines": {
-    "node": "18.x"
+    "node": "22.x"
   }
 } 
